# mtcb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  python-publish.yml
docs/: MTCB_BENCHMARK_PROPOSALS.md  ai-search-research-exploration.md  dataset-generator-plan.md  flashchunker-design-spec.md
scripts/: benchmark_neural.py  benchmark_slumber.py  fix_dataset_quality.py  fix_hojicha_dataset.py  gacha.py  generate_hojicha_qa.py  generate_nano_datasets.py  generate_sencha_qa.py  hojicha_selected_docs.json  macha.py
src/judie/: __init__.py  cache.py  embeddings.py  generator.py  types.py
src/judie/dataset/: __init__.py  deduplicator.py  generator.py  prompts.py  types.py  validator.py
src/judie/evaluators/: simple.py
src/mtcb/: __init__.py  benchmark.py  cache.py  embeddings.py  store.py  types.py
src/mtcb/dataset/: __init__.py  deduplicator.py  generator.py  prompts.py  types.py  validator.py
src/mtcb/evaluators/: __init__.py  base.py  cocha.py  ficha.py  gacha.py  genmaicha.py  hojicha.py  macha.py  nano.py  ryokucha.py  sencha.py  simple.py  tacha.py
