[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtcb"
version = "0.0.3"
description = "MTCB - Make That Chunker Better! Evaluate your RAG chunking with ease."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Bhavnick Minhas" },
    { name = "Shreyash Nigam" },
]
maintainers = [
    { name = "Bhavnick Minhas" },
    { name = "Shreyash Nigam" },
]
keywords = [
    "chunking",
    "rag",
    "llm",
    "evaluation",
    "nlp",
    "information-retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "chonkie[all]>=1.0.0, <1.1.0",
    "datasets>=2.0.0",
    "catsu>=0.1.0",
    "tokenizers>=0.15.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=6.0",
    "pytest-cov",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/chonkie-inc/mtcb"
Repository = "https://github.com/chonkie-inc/mtcb"
Documentation = "https://github.com/chonkie-inc/mtcb#readme"
"Bug Tracker" = "https://github.com/chonkie-inc/mtcb/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]