[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtcb"
version = "0.0.3"
description = "MTCB - Massive Text Chunking Benchmark. Evaluate your RAG chunking with ease."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Bhavnick Minhas", email = "bhavnick@chonkie.ai" },
    { name = "Shreyash Nigam", email = "shreyash@chonkie.ai" },
]
maintainers = [
    { name = "Bhavnick Minhas", email = "bhavnick@chonkie.ai" },
    { name = "Shreyash Nigam", email = "shreyash@chonkie.ai" },
]
keywords = [
    "benchmark",
    "chunking",
    "text-chunking",
    "rag",
    "llm",
    "evaluation",
    "nlp",
    "information-retrieval",
    "embeddings",
    "retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.11"
dependencies = [
    "chonkie[all]>=1.0.0",
    "datasets>=2.0.0",
    "catsu>=0.1.0",
    "tokenizers>=0.15.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=6.0",
    "pytest-cov",
    "pytest-xdist",
    "ty",
]

[project.urls]
Homepage = "https://github.com/chonkie-inc/mtcb"
Repository = "https://github.com/chonkie-inc/mtcb"
Documentation = "https://github.com/chonkie-inc/mtcb#readme"
"Bug Tracker" = "https://github.com/chonkie-inc/mtcb/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
lint.select = ["B904", "F", "I", "D"]
lint.ignore = ["D211", "D213", "D203"]

[tool.ruff.format]
preview = true
indent-style = "space"

[tool.ty]